--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
 
   <body>
-    <div class="page">
+    <div class="page" id="index">
       <img
         src="https://images.onlinelabels.com/images/clip-art/Leomarc/Leomarc_stop_sign.png"
       />
       <h1>Eat mindfully.</h1>
     </div>
-    <!--     <script type="text/javascript" src="script.js"></script> -->
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
