--- a/forms/bored.html
+++ b/forms/bored.html
@@ -2,16 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
     <title>Bored?</title>
   </head>
 
   <body>
     <form class="page">
       <h1>Are you bored?</h1>
-      <button>Yes</button>
-      <button>No</button>
+      <div class="buttons">
+        <button onclick="redirect(event, 'journal')">Yes</button>
+        <button onclick="redirect(event, 'stressed')">No</button>
+      </div>
     </form>
-    <!--     <script type="text/javascript" src="script.js"></script> -->
+    <script type="text/javascript" src="../script.js"></script>
   </body>
 </html>
