style: changed some display text

--- a/forms/bored.html
+++ b/forms/bored.html
@@ -8,10 +8,10 @@
 
   <body>
     <form class="page">
-      <h1>Are you bored?</h1>
+      <h1>Are you hungry right now or are you bored?</h1>
       <div class="buttons">
-        <button onclick="redirect(event, 'journal')">Yes</button>
-        <button onclick="redirect(event, 'stressed')">No</button>
+        <button onclick="redirect(event, 'journal')">Bored</button>
+        <button onclick="redirect(event, 'stressed')">Hungry</button>
       </div>
     </form>
     <script type="text/javascript" src="../script.js"></script>
