--- a/forms/stressed.html
+++ b/forms/stressed.html
@@ -8,10 +8,10 @@
 
   <body>
     <form class="page">
-      <h1>Are you bored?</h1>
+      <h1>Are you hungry right not or are you stressed?</h1>
       <div class="buttons">
-        <button onclick="redirect(event, 'journal')">Yes</button>
-        <button onclick="redirect(event, 'stressed')">No</button>
+        <button onclick="redirect(event, 'journal')">Stressed</button>
+        <button onclick="redirect(event, 'sad')">Hungry</button>
       </div>
     </form>
     <script type="text/javascript" src="../script.js"></script>
