--- a/forms/congrats.html
+++ b/forms/congrats.html
@@ -9,8 +9,8 @@
   <body>
     <div class="page">
       <h1>Congratulations on taking the time to be mindful of your choices.</h1>
-      <form>
-        <button onclick="redirect(event, 'index')">Run again?</button>
+      <form action="../index.html" method="get">
+        <button>Run again?</button>
       </form>
     </div>
     <script type="text/javascript" src="../script.js"></script>
