feat: added journal pages. mvp status

--- a/forms/bored.html
+++ b/forms/bored.html
@@ -9,12 +9,11 @@
   <body>
     <div class="page">
       <h1>Are you hungry right now or are you bored?</h1>
-      <div>
-        <form action="/forms/journal.html" method="get" class="page">
-          <input type="hidden" name="type" value="bored" />
+      <div class="buttons">
+        <form action="/forms/bored-journal.html" method="get">
           <button>Bored</button>
         </form>
-        <form action="/forms/stressed.html" method="get" class="page">
+        <form action="/forms/stressed.html" method="get">
           <button>Hungry</button>
         </form>
       </div>
