--- a/forms/congrats.html
+++ b/forms/congrats.html
@@ -10,7 +10,7 @@
     <div class="page">
       <h1>Congratulations on taking the time to be mindful of your choices.</h1>
       <form action="../index.html" method="get">
-        <button>Run again?</button>
+        <button>Start again?</button>
       </form>
     </div>
     <script type="text/javascript" src="../script.js"></script>
