--- a/forms/sad.html
+++ b/forms/sad.html
@@ -10,10 +10,10 @@
     <div class="page">
       <h1>Are you hungry right now or are you sad?</h1>
       <div>
-        <form action="/forms/journal.html" method="get" class="page">
+        <form action="/forms/sad-journal.html" method="get">
           <button>Sad</button>
         </form>
-        <form action="/forms/stop-eating.html" method="get" class="page">
+        <form action="/forms/stop-eating.html" method="get">
           <button>Hungry</button>
         </form>
       </div>
