--- a/forms/stop-eating.html
+++ b/forms/stop-eating.html
@@ -10,7 +10,7 @@
     <div class="page">
       <h1>Are you going to stop eating now? It's okay to stop eating.</h1>
       <div>
-        <form action="/forms/congrats.html" method="get" class="page">
+        <form action="/forms/congrats.html" method="get">
           <button>Yes, I will stop</button>
           <button>No, I will not</button>
         </form>
