--- a/forms/stressed.html
+++ b/forms/stressed.html
@@ -10,10 +10,10 @@
     <div class="page">
       <h1>Are you hungry right now or are you stressed?</h1>
       <div>
-        <form action="/forms/journal.html" method="get" class="page">
+        <form action="/forms/stressed-journal.html" method="get">
           <button>Stressed</button>
         </form>
-        <form action="/forms/sad.html" method="get" class="page">
+        <form action="/forms/sad.html" method="get">
           <button>Hungry</button>
         </form>
       </div>
