style: added background, font, sizing and organization

--- a/forms/bored-journal.html
+++ b/forms/bored-journal.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <title>Journal</title>
   </head>
 
   <body>
     <div class="page">
-      <h1>
-        Take a breath. Take a few minutes to write about why you feel so bored.
-      </h1>
+      <h1>Take a breath.</h1>
+      <h1>Take a few minutes to write about why you feel so bored.</h1>
       <textarea></textarea>
       <h1>Is there anything you can do that would make you feel less bored?</h1>
       <textarea></textarea>
-      <form action="/forms/stressed.html" method="get" class="page">
+      <form action="/forms/stressed.html" method="get">
         <button>Done</button>
       </form>
     </div>
