--- a/forms/sad.html
+++ b/forms/sad.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <title>Sad?</title>
   </head>
 
   <body>
     <div class="page">
       <h1>Are you hungry right now or are you sad?</h1>
-      <div>
+      <div class="buttons">
         <form action="/forms/sad-journal.html" method="get">
           <button>Sad</button>
         </form>
