--- a/forms/sad-journal.html
+++ b/forms/sad-journal.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <title>Journal</title>
   </head>
 
   <body>
     <div class="page">
-      <h1>
-        Take a breath. Take a few minutes to write about what is making you feel
-        sad.
-      </h1>
+      <h1>Take a breath.</h1>
+      <h1>Take a few minutes to write about what is making you feel sad.</h1>
       <textarea></textarea>
       <h1>Is there anything you can do that would make you feel less sad?</h1>
       <textarea></textarea>
