--- a/forms/stressed-journal.html
+++ b/forms/stressed-journal.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <title>Journal</title>
   </head>
 
   <body>
     <div class="page">
+      <h1>Take a breath.</h1>
       <h1>
-        Take a breath. Take a few minutes to write about what is making you feel
-        stressed.
+        Take a few minutes to write about what is making you feel stressed.
       </h1>
       <textarea></textarea>
       <h1>
-        Is there anything you can do that would make you feel less stressed?
+        Is there anything you can do to make you feel less stressed?
       </h1>
       <textarea></textarea>
       <form action="/forms/sad.html" method="get">
