fix: added app name to links for github deployment

--- a/forms/sad-journal.html
+++ b/forms/sad-journal.html
@@ -17,7 +17,7 @@
       <textarea></textarea>
       <h1>Is there anything you can do that would make you feel less sad?</h1>
       <textarea></textarea>
-      <form action="/forms/stop-eating.html" method="get">
+      <form action="/mindfull-app/forms/stop-eating.html" method="get">
         <button>Done</button>
       </form>
     </div>
