--- a/forms/stressed-journal.html
+++ b/forms/stressed-journal.html
@@ -21,7 +21,7 @@
         Is there anything you can do to make you feel less stressed?
       </h1>
       <textarea></textarea>
-      <form action="/forms/sad.html" method="get">
+      <form action="/mindfull-app/forms/sad.html" method="get">
         <button>Done</button>
       </form>
     </div>
