--- a/forms/bored.html
+++ b/forms/bored.html
@@ -14,10 +14,10 @@
     <div class="page">
       <h1>Are you hungry right now or are you bored?</h1>
       <div class="buttons">
-        <form action="/forms/bored-journal.html" method="get">
+        <form action="/mindfull-app/forms/bored-journal.html" method="get">
           <button>Bored</button>
         </form>
-        <form action="/forms/stressed.html" method="get">
+        <form action="/mindfull-app/forms/stressed.html" method="get">
           <button>Hungry</button>
         </form>
       </div>
