Revert "fix: added app name to links for github deployment"
This reverts commit 1d5a94ed440c112dd807e4258b00329e001b48de.

--- a/forms/bored-journal.html
+++ b/forms/bored-journal.html
@@ -17,7 +17,7 @@
       <textarea></textarea>
       <h1>Is there anything you can do that would make you feel less bored?</h1>
       <textarea></textarea>
-      <form action="/mindfull-app/forms/stressed.html" method="get">
+      <form action="/forms/stressed.html" method="get">
         <button>Done</button>
       </form>
     </div>
