--- a/forms/sad.html
+++ b/forms/sad.html
@@ -14,10 +14,10 @@
     <div class="page">
       <h1>Are you hungry right now or are you sad?</h1>
       <div class="buttons">
-        <form action="/mindfull-app/forms/sad-journal.html" method="get">
+        <form action="/forms/sad-journal.html" method="get">
           <button>Sad</button>
         </form>
-        <form action="/mindfull-app/forms/stop-eating.html" method="get">
+        <form action="/forms/stop-eating.html" method="get">
           <button>Hungry</button>
         </form>
       </div>
