--- a/forms/stressed.html
+++ b/forms/stressed.html
@@ -17,7 +17,7 @@
         <form action="/forms/stressed-journal.html" method="get">
           <button>Stressed</button>
         </form>
-        <form action="/mindfull-app/forms/sad.html" method="get">
+        <form action="/forms/sad.html" method="get">
           <button>Hungry</button>
         </form>
       </div>
