fix: added app name to links for github deployment

--- a/forms/stressed.html
+++ b/forms/stressed.html
@@ -14,10 +14,10 @@
     <div class="page">
       <h1>Are you hungry right now or are you stressed?</h1>
       <div class="buttons">
-        <form action="/forms/stressed-journal.html" method="get">
+        <form action="/mindfull-app/forms/stressed-journal.html" method="get">
           <button>Stressed</button>
         </form>
-        <form action="/forms/sad.html" method="get">
+        <form action="/mindfull-app/forms/sad.html" method="get">
           <button>Hungry</button>
         </form>
       </div>
