--- a/forms/congrats.html
+++ b/forms/congrats.html
@@ -13,7 +13,7 @@
   <body>
     <div class="page">
       <h1>Congratulations on taking the time to be mindful of your choices.</h1>
-      <form action="../index.html" method="get">
+      <form action="/mindfull-app/index.html" method="get">
         <button>Start again?</button>
       </form>
     </div>
